q2/k8s/yaml/reader-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: writer
spec:
  replicas: 3
  selector:
    matchLabels:
      app: writer
  template:
    metadata:
      labels:
        app: writer
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - writer
              topologyKey: "topology.kubernetes.io/zone"
      nodeSelector:
        service: "common"
      containers:
        - name: writer
          image: my-app-writer:latest
          ports:
            - containerPort: 8080
