q2/k8s/yaml/asiayo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: asiayo-ingress
spec:
  rules:
    - host: asiayo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-service
                port:
                  number: 80
